--- a/Lab2/app/src/main/res/layout/main.xml
+++ b/Lab2/app/src/main/res/layout/main.xml
@@ -61,7 +61,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:id="@+id/subsButton"
-            android:elevation="0dp" />
+            android:elevation="0dp"
+            />
 
         <Button
             android:text="@string/unsubs"
