--- a/MyPlayer/app/src/main/res/layout/main.xml
+++ b/MyPlayer/app/src/main/res/layout/main.xml
@@ -26,4 +26,11 @@
         android:layout_height="176dp"
         android:layout_weight="0.00" />
 
+    <Button
+        android:text="Logging"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="100dp"
+        android:id="@+id/logButton" />
+
 </LinearLayout>
